- (getversion) non strict mode (MetalWeb).
- (run) non strict mode (MetalWeb).

0.1.0-alpha.9:
==============
- (fileonly) non strict mode (amrss).
- (copylib) non strict mode (amrss).
- Ambiguous function call / format string allowed in non string mode (amrss).

0.1.0-alpha.10:
===============
- Multiple (command):s allowed in (startup) (MUI5).
- Allow empty (if) statements (amrss).
- Allow dynamic options (IBrowse).

0.1.0-alpha.11:
===============
- Merge (run), (execute) and (rexx) children (NetSurf).
- File lister garbage fixed.

0.1.0-alpha.12:
===============
- (user) turned into a real function returning the old value when set (AWebJFIF).
- Ambiguous function call / format string fix (amrss).

0.1.0-alpha.13:
===============
- Empty procedures allowed (MCC_Date).
- (select) block execution fixed.
- (onerror) and (trap) naked blocks allowed. 

0.1.0-alpha.14:
===============
- (textfile) multiple (append) allowed (NetSurf).
- (AND) and (OR) >2 arguments allowed (MCC_Date).
- Primitives allowed to mimic return values at the end of control blocks (MCC_Date). 

0.1.0-alpha.15:
===============
- Default (welcome) and (exit) fix.
- Debug mode toggle (@debug 0/1) 
- String delimiter fix.

0.1.0-alpha.16:
===============
- (askchoice) and (askoptions) control sequence filter.
- (askchoice) and (askoptions) invisible item default value fix.

0.1.0-alpha.17:
===============
- 32-bit numerical token fix.

0.1.0-alpha.18:
===============
- Error feedback regression fixed.

0.1.0-alpha.19:
===============
- GUI layout improvements.

0.1.0-alpha.20:
===============
- (askchoices) abort fix.
- WB tooltypes promotion.

0.1.0-alpha.21:
===============
- (message) abort fix.

0.1.0-alpha.22:
===============
- Default locale promoted to @language.

0.1.0-alpha.23:
===============
- Help bubble fix.

0.1.0-alpha.24:
===============
- (debug) prints undefined variables as they should.

0.1.0-alpha.25:
===============
- Naked (debug) allowed.
- (getsum) using Adler-32.
- ?