@@ -1,3 +1,2 @@
 - Check list mgmt for mem leaks.
-- Check tooltype DEFUSER
 - (showmedia) seems to be a thing? (>= V44), refer to IBrowse script.
