@@ -3,7 +3,7 @@
 
 (set #app-bin "installer")
 (set @app-name "InstallerLG")
-(set @default-dest "RAM:")
+(set @default-dest "C:")
 
 ;---------------------------------------------------------------------------------------------------------------------------------------------
 ; Welcome 
@@ -24,10 +24,36 @@
 ;---------------------------------------------------------------------------------------------------------------------------------------------
 ; Copy executable
 ;---------------------------------------------------------------------------------------------------------------------------------------------
-(copylib
-  (prompt ("Copying '%s' to '%s'" #app-bin (tackon @default-dest #app-bin)))
-  (help "-")
-  (source "installer")
-  (dest @default-dest)
-  (confirm 0)
+(if (=
+        (getversion #app-bin)
+        (getversion (tackon @default-dest #app-bin))
+    )
+    ; Same version
+    (
+        (if (<>
+                (getsum #app-bin)
+                (getsum (tackon @default-dest #app-bin))
+            )
+            ; Different checksum
+            (
+                (copyfiles
+                    (prompt ("Destination '%s'" @default-dest))
+                    (help "-")
+                    (source #app-bin)
+                    (dest @default-dest)
+                )
+            )
+        )
+    )
+    ; Different version
+    (
+        (copylib
+            (prompt ("Copying '%s' to '%s'" #app-bin (tackon @default-dest #app-bin)))
+            (help "-")
+            (source #app-bin)
+            (dest @default-dest)
+            (confirm 0)
+        )
+    )
 )
+
